test/sc++/error/renderall-color.scpp
../../scc/error/renderall-color.sc